doc: add documentation for currencies
