# docs/swagger.yaml
@@ -222,4 +222,40 @@ paths:
       summary: Register a new user
       tags:
       - auth
+  /currencies:
+    get:
+      consumes:
+      - application/json
+      description: Get all currencies or currency by ID
+      parameters:
+      - description: Currency ID
+        in: query
+        name: id
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+      summary: Get all currencies or currency by ID
+      tags:
+      - currencies
 swagger: "2.0"
